[package]
name = "analwave"
version = "0.5.0"
edition = "2024"
default-run = "analwave"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
ebur128 = "0.1.10"
indicatif = "0.18.0"
wavers = "1.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
aus = "0.1.8"
png = "0.18.0"
